# mnemos

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
benchmark/: compare_backends.py  generate_dataset.py  report.py  run_benchmark.py  scoring.py
benchmark/results/: backend_comparison.json
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts  types.ts
dashboard/src/components/: GrowthChart.tsx
dashboard/src/context/: UserContext.tsx
dashboard/src/pages/: ChatPage.tsx  MemoryBrowserPage.tsx  ProceduralPage.tsx  ReflectionLogPage.tsx  RetrievalTracePage.tsx  StatsPage.tsx
migrations/: env.py
migrations/versions/: 33c4fd27a9e9_init_episodic_and_semantic_memory.py  b2823b78b8c5_add_reflection_log_procedural_.py  fb7f36d98c17_add_procedural_turns_table.py
src/mnemos/: __init__.py  config.py
src/mnemos/agent/: conversation.py  prompt_builder.py
src/mnemos/api/: deps.py  main.py  schemas.py
src/mnemos/cli/: demo.py  reflect.py
src/mnemos/db/: models.py  session.py
src/mnemos/embeddings/: base.py  factory.py  local_client.py  mock_client.py
src/mnemos/llm/: anthropic_client.py  base.py  factory.py  groq_client.py  mock_client.py
tests/: conftest.py  test_benchmark_scoring.py  test_storage_contract.py
tests/integration/: test_api_chat_flow.py
tests/unit/: test_conversation_manager.py  test_extraction.py  test_procedural.py  test_reflection.py  test_retrieval.py  test_sdk.py
(+17 files in other folders)
